--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Business</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="one">
+            <img class="logo">
+            <div class="title">main-title</div>
+            <div class="subtext">subtext</div>
+            <button>Sign up</button>
+        </div>
+        <div class="two">
+            <ul>
+                <li><a href="#">link1</a></li>
+                <li><a href="#">link2</a></li>
+                <li><a href="#">link3</a></li>
+            </ul>
+            <img src="" alt="">  
+        </div>     
+    </div>
 </body>
 </html>
