Add images file
This includes both the business logo and a section-one image. The
index.html was edited to reflect the image file addition.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Business</title>
-</head>
-<body>
-    <div class="header">
-        <div class="one">
-            <img class="logo">
-            <div class="title">main-title</div>
-            <div class="subtext">subtext</div>
-            <button>Sign up</button>
+    <head>
+        <meta charset="UTF-8">
+        <title>Business</title>
+        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    </head>
+    <body>
+        <div class="section-one">
+
+            <div class="header-one">
+                <img src="./images/logo.png" alt="logo">
+                <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                    <li><a href="#">link3</a></li>
+                </ul>
+                
+            </div>
+            <div class="header-two">
+                <div class="one">
+                    <div class="title">main-title</div>
+                    <div class="subtext">subtext</div>
+                    <button>Sign up</button>
+                </div>
+                <img src="./images/cake.jpg" alt="image placeholder">  
+            </div>     
         </div>
-        <div class="two">
-            <ul>
-                <li><a href="#">link1</a></li>
-                <li><a href="#">link2</a></li>
-                <li><a href="#">link3</a></li>
-            </ul>
-            <img src="" alt="">  
-        </div>     
-    </div>
-</body>
+    </body>
 </html>
