Edit index.html and styles.css
- rename some elements
- style entire section-one

--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
         <div class="section-one">
 
             <div class="header-one">
-                <img src="./images/logo.png" alt="logo">
-                <ul>
-                    <li><a href="#">link1</a></li>
-                    <li><a href="#">link2</a></li>
-                    <li><a href="#">link3</a></li>
-                </ul>
-                
+                <div class="header-logo">Cake palace</div>
+                <div class="title">The best cakes in town</div>
+                <div class="subtext">Life is too short to say no to cakes! At Cake palace, 
+                        we offer a wide variety of fantastic cakes for different occasions.</div>
+                <div class="button"><button>Explore</button></div>    
             </div>
             <div class="header-two">
-                <div class="one">
-                    <div class="title">main-title</div>
-                    <div class="subtext">subtext</div>
-                    <button>Sign up</button>
-                </div>
-                <img src="./images/cake.jpg" alt="image placeholder">  
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+                <div class="main-image"><img src="./images/cake.jpg" alt="A cake on a plate"></div>  
             </div>     
         </div>
     </body>
