--- a/index.html
+++ b/index.html
@@ -23,7 +23,30 @@
                     <li><a href="#">About Us</a></li>
                 </ul>
                 <div class="main-image"><img src="./images/cake.jpg" alt="A cake on a plate"></div>  
-            </div>     
+            </div> 
+        </div>
+        <div class="section-two">
+            <div class="title-two">cakes overview</div>
+            <div>
+                <div class="image">
+                    <img src="./images/weddingcake.jpg" alt="">
+                    <div class="text">wedding cakes</div>
+                </div>
+                <div class="image">
+                    <img src="./images/birthdaycake.jpg" alt="">
+                    <div class="text">birthday cakes</div>
+                </div>
+                <div class="image">
+                    <img src="./images/cupcakes.jpg" alt="">
+                    <div class="text">cup cakes</div>
+                </div>
+                <div class="image">
+                    <img src="./images/customcake.jpg" alt="">
+                    <div class="text">specify your cake design</div>
+                </div>
+            </div>
+        </div> 
+            
         </div>
     </body>
 </html>
