Edit index.html and styles.css
- style section-two of the page

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
             </div> 
         </div>
         <div class="section-two">
-            <div class="title-two">cakes overview</div>
-            <div>
+            <div class="title-two">Product Categories</div>
+            <div class="images">
                 <div class="image">
                     <img src="./images/weddingcake.jpg" alt="">
-                    <div class="text">wedding cakes</div>
+                    <div class="text">We offer wedding cakes specific to customer preferences</div>
                 </div>
                 <div class="image">
                     <img src="./images/birthdaycake.jpg" alt="">
-                    <div class="text">birthday cakes</div>
+                    <div class="text">Choose from a wide variety of birthday cakes</div>
                 </div>
                 <div class="image">
                     <img src="./images/cupcakes.jpg" alt="">
-                    <div class="text">cup cakes</div>
+                    <div class="text">We include different flavored cupcakes with creamy frosting</div>
                 </div>
                 <div class="image">
                     <img src="./images/customcake.jpg" alt="">
-                    <div class="text">specify your cake design</div>
+                    <div class="text">We offer gourmet cakes specific to customer preferences</div>
                 </div>
             </div>
         </div> 
