Edit index.html and styles.css
Add section-three to index.html and style it.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     </head>
     <body>
         <div class="section-one">
-
             <div class="header-one">
                 <div class="header-logo">Cake palace</div>
                 <div class="title">The best cakes in town</div>
@@ -25,6 +24,7 @@
                 <div class="main-image"><img src="./images/cake.jpg" alt="A cake on a plate"></div>  
             </div> 
         </div>
+
         <div class="section-two">
             <div class="title-two">Product Categories</div>
             <div class="images">
@@ -46,7 +46,14 @@
                 </div>
             </div>
         </div> 
-            
+          
+        <div class="section-three">
+            <div class="quote">"At 50, if you are on a diet on your birthday, you can't eat a piece 
+                of your birthday cake. So grab two, a piece in each hand, and, lo and behold, you 
+                will be on a balanced diet! Happy birthday old chum!"
+            </div>
+            <div class="quote-two">~ Abraham Lincoln</div>
+        </div>
         </div>
     </body>
 </html>
