Edit index.html and style.css
Add and style section-four and footer section.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
             </div>
             <div class="quote-two">~ Abraham Lincoln</div>
         </div>
+
+        <div class="section-four">
+            <div class="action-alert">
+                <div class="action">
+                    <div>Cake to action!</div>
+                    <div class="subtext">Order by clicking the button right over there!</div>
+                </div>
+                <div class="order"><button>Order now</button></div>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div>Copyright @ Cake palace 2022</div>
+        </div>
         </div>
     </body>
 </html>
